test/errors/missing_constraint_in_generic/main.sk
module Main {

struct Foo {

}

protocol Bar[T] {
    fn bar(&self) -> ()
}

pub impl FooImpl Bar[Foo] {
    fn bar(&self) -> () {

    }
}

fn generic[T](t: T) {
    t.bar();
}

fn main() {
    let f = Foo();
    generic(f);
}

}